--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@
 
 .qcard {
   border: 1px solid black;
+  box-shadow: 8px 8px 20px 2px #ccc;
   min-height: 300px;
   height: fit-content;
+  font-size: 20px;
 }
 
 .next-row {
